--- a/index.html
+++ b/index.html
@@ -9,41 +9,48 @@
       <body>
         <header>
             <!--Add logo image here-->
+            <h4>Header Logo</h4>
             <ul>
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
         </header>
-        <div class="into">
-            <h1>this website is awesome</h1>
-            <p>This website has some subtext that goes under the main title. It's a smaller font and the color is low contrast</p>
-            <button>Sign Up</button>
-            <div>
+        <div class="intro">
+            <div class="intro-container">
+                <h1>this website is awesome</h1>
+                <p>This website has some subtext that goes under the main title. It's a smaller font and the color is low contrast</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="intro-image">
                 <p>This is a placeholder for a image</p>
                 <!--Add image here-->
             </div>
         </div>
         <div class="random-info">
             <h2>Some random information</h2>
-            <div class="image_1">
-                <div class=""></div>
-                <p>This is some subtext under a illustration or image</p>
-            </div>
-            <div class="image_2">
-                <div></div>
-                <p>This is some subtext under a illustration or image</p>
-            </div>
-            <div class="image_3">
-                <div></div>
-                <p>This is some subtext under a illustration or image</p>
-            </div>
-            <div class="image_4">
+            <div class="info-container">
+              <div class="image_1">
+                  <div class="empty"></div>
+                  <p>This is some subtext under a illustration or image</p>
+              </div>
+              <div class="image_2">
+                  <div class="empty"></div>
+                  <p>This is some subtext under a illustration or image</p>
+              </div>
+              <div class="image_3">
+                  <div class="empty"></div>
+                  <p>This is some subtext under a illustration or image</p>
+              </div>
+              <div class="image_4">
+                  <div class="empty"></div>
+                  <p>This is come subtext under a illustration or image</p>
+              </div>
             </div>
         </div>
         <div class="quote">
-          <p>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it, who knows? All I know is that it looks nice.</p>
-          <p>-Thor, God of Thunder</p>
+          <quote>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it, who knows? All I know is that it looks nice.</p>
+          <p>-Thor, God of Thunder</quote>
         </div>
         <div class="call-to-action">
             <div>
@@ -53,7 +60,7 @@
             </div>
         </div>
         <footer>
-            <p>Copyright @ The Odin Project 2021</p>
+            <p>Copyright @ The Odin Project 2021x</p>
         </footer>
       </body>
     </html>
