--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
         <div class="random-info">
             <h2>Some random information</h2>
             <div class="info-container">
-              <div class="image_1">
+              <div class="info-image">
                   <div class="empty"></div>
                   <p>This is some subtext under a illustration or image</p>
               </div>
-              <div class="image_2">
+              <div class="info-image">
                   <div class="empty"></div>
                   <p>This is some subtext under a illustration or image</p>
               </div>
-              <div class="image_3">
+              <div class="info-image">
                   <div class="empty"></div>
                   <p>This is some subtext under a illustration or image</p>
               </div>
-              <div class="image_4">
+              <div class="info-image">
                   <div class="empty"></div>
                   <p>This is come subtext under a illustration or image</p>
               </div>
             </div>
         </div>
-        <div class="quote">
-          <quote>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it, who knows? All I know is that it looks nice.</p>
-          <p>-Thor, God of Thunder</quote>
+        <div class="quote-container">
+          <p class="quote">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it, who knows? All I know is that it looks nice.</p>
+          <p class="author">-Thor, God of Thunder</p>
         </div>
         <div class="call-to-action">
             <div>
