add and style both call to action section and footer

--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
         </div>
         <div class="call-to-action">
             <div>
+                <div class="text">
                 <h3>Call to action! It's time!</h3>
                 <p>Sign up by clicking that button right over there!</p>
+                </div>
                 <button>Sign Up</button>
             </div>
         </div>
         <footer>
-            <p>Copyright @ The Odin Project 2021x</p>
+            <p>Copyright @ The Odin Project 2021</p>
         </footer>
       </body>
     </html>
